[gd_scene load_steps=5 format=2]

[ext_resource path="res://Debug/DebugSwipe.gd" type="Script" id=1]
[ext_resource path="res://Debug/Debug.gd" type="Script" id=2]
[ext_resource path="res://Game/Resources/Style/Small_font.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 3 )

[node name="Debug" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPanel" type="PopupPanel" parent="."]
modulate = Color( 1, 1, 1, 0.74902 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -222.5
margin_right = 383.0
margin_bottom = 222.5

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = -0.1
margin_top = -2.6
margin_right = 0.100006
margin_bottom = -0.399994
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollSpeed" type="HBoxContainer" parent="DebugPanel/VBoxContainer" groups=[
"GameDebug",
]]
margin_right = 304.0
margin_bottom = 36.0
size_flags_horizontal = 0

[node name="ScrollSpeedLabel" type="Label" parent="DebugPanel/VBoxContainer/ScrollSpeed"]
margin_top = 2.0
margin_right = 200.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
text = "Scroll speed: 100"
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollSpeedSlider" type="HSlider" parent="DebugPanel/VBoxContainer/ScrollSpeed"]
margin_left = 204.0
margin_right = 304.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 0
max_value = 300.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetPosition" type="Button" parent="DebugPanel/VBoxContainer" groups=[
"GameDebug",
]]
margin_top = 40.0
margin_right = 118.0
margin_bottom = 82.0
focus_mode = 0
size_flags_horizontal = 0
text = "Reset Position"

[node name="RestartGame" type="Button" parent="DebugPanel/VBoxContainer" groups=[
"GameDebug",
]]
margin_top = 86.0
margin_right = 116.0
margin_bottom = 128.0
size_flags_horizontal = 0
text = "Restart Game"

[node name="InfiniteAmmo" type="HBoxContainer" parent="DebugPanel/VBoxContainer" groups=[
"GameDebug",
]]
margin_top = 132.0
margin_right = 190.0
margin_bottom = 172.0
size_flags_horizontal = 0

[node name="InfiniteAmmoLabel" type="Label" parent="DebugPanel/VBoxContainer/InfiniteAmmo"]
margin_top = 4.0
margin_right = 110.0
margin_bottom = 36.0
text = "Infinite Ammo:"

[node name="InfiniteAmmoSwitch" type="CheckButton" parent="DebugPanel/VBoxContainer/InfiniteAmmo"]
margin_left = 114.0
margin_right = 190.0
margin_bottom = 40.0

[node name="Invulnerable" type="HBoxContainer" parent="DebugPanel/VBoxContainer" groups=[
"GameDebug",
]]
margin_top = 176.0
margin_right = 175.0
margin_bottom = 216.0
size_flags_horizontal = 0

[node name="InvulnerableLabel" type="Label" parent="DebugPanel/VBoxContainer/Invulnerable"]
margin_top = 4.0
margin_right = 95.0
margin_bottom = 36.0
text = "Invulnerable:"

[node name="InvulnerableSwitch" type="CheckButton" parent="DebugPanel/VBoxContainer/Invulnerable"]
margin_left = 99.0
margin_right = 175.0
margin_bottom = 40.0

[node name="AlwaysOnTop" type="HBoxContainer" parent="DebugPanel/VBoxContainer"]
margin_top = 220.0
margin_right = 195.0
margin_bottom = 260.0
size_flags_horizontal = 0

[node name="AlwaysOnTopLabel" type="Label" parent="DebugPanel/VBoxContainer/AlwaysOnTop"]
margin_top = 4.0
margin_right = 115.0
margin_bottom = 36.0
text = "Always On Top:"

[node name="AlwaysOnTopSwitch" type="CheckButton" parent="DebugPanel/VBoxContainer/AlwaysOnTop"]
margin_left = 119.0
margin_right = 195.0
margin_bottom = 40.0

[node name="Resizeable" type="HBoxContainer" parent="DebugPanel/VBoxContainer"]
margin_top = 264.0
margin_right = 228.0
margin_bottom = 304.0
size_flags_horizontal = 0

[node name="ResizeableLabel" type="Label" parent="DebugPanel/VBoxContainer/Resizeable"]
margin_top = 4.0
margin_right = 148.0
margin_bottom = 36.0
text = "Resizeable Window:"

[node name="ResizeableSwitch" type="CheckButton" parent="DebugPanel/VBoxContainer/Resizeable"]
margin_left = 152.0
margin_right = 228.0
margin_bottom = 40.0

[node name="DebugLabel_1" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 308.0
margin_right = 200.0
margin_bottom = 340.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 0
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel_2" type="Label" parent="DebugPanel/VBoxContainer"]
margin_top = 344.0
margin_right = 200.0
margin_bottom = 376.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 0
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugSwipe" type="Control" parent="."]
margin_right = 130.0
margin_bottom = 50.0
rect_min_size = Vector2( 130, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
